[metadata]
name = safla
version = attr: safla.__version__
description = Self-Aware Feedback Loop Algorithm - A sophisticated AI/ML system implementing autonomous learning and adaptation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ruvnet/SAFLA
author = SAFLA Development Team
author_email = ruv@ruv.net
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Distributed Computing

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*
    examples*


[options.entry_points]
console_scripts =
    safla = safla.cli:main
    safla-install = safla.installer:main

safla.plugins =
    memory = safla.core.hybrid_memory:HybridMemoryArchitecture
    metacognitive = safla.core.meta_cognitive_engine:MetaCognitiveEngine
    safety = safla.core.safety_validation:SafetyValidationFramework
    mcp = safla.core.mcp_orchestration:MCPOrchestrator

[options.package_data]
safla = py.typed, *.json, *.yaml, *.yml

[bdist_wheel]
universal = 0

[egg_info]
tag_build = 
tag_date = 0