[package]
name = "agentic-flow-quic"
version = "0.1.0"
edition = "2021"
authors = ["Agentic Flow Contributors"]
description = "High-performance QUIC transport layer for agentic-flow with WASM support"
license = "MIT"
repository = "https://github.com/ruvnet/agentic-flow"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["client", "server"]
client = []
server = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys", "console_error_panic_hook", "serde-wasm-bindgen"]

[dependencies]
# Core QUIC (only for non-WASM)
quinn = { version = "0.11", optional = true }
tokio = { version = "1.40", features = ["full"], optional = true }
rustls = { version = "0.23", features = ["ring"], optional = true }
rcgen = { version = "0.13", optional = true }

# Common dependencies (WASM + Native)
bytes = { version = "1.7", features = ["serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
futures = "0.3"

# WASM-specific dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Native-only dependencies
quinn = "0.11"
tokio = { version = "1.40", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
