[workspace]
resolver = "2"
members = [
    "crates/climate-core",
    "crates/climate-data",
    "crates/climate-models",
    "crates/climate-physics",
    "crates/climate-api",
    "crates/climate-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Climate Prediction Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/climate-prediction"

[workspace.dependencies]
# Async runtime and HTTP
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = { version = "1.5", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# ML and numerical computing
candle-core = "0.8"
candle-nn = "0.8"
ndarray = { version = "0.16", features = ["serde"] }
ndarray-stats = "0.6"
linfa = "0.7"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database (optional)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# Testing
mockito = "1.5"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
