[package]
name = "reasoningbank-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
reasoningbank-core = { path = "../reasoningbank-core" }
reasoningbank-storage = { path = "../reasoningbank-storage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util", "macros"] }
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "learning_benchmark"
harness = false
path = "../../benches/learning_benchmark.rs"
