[package]
name = "reasoningbank-storage"
version = "0.1.0"
edition = "2021"

[features]
default = []
wasm-adapters = ["wasm-bindgen", "js-sys", "web-sys", "async-trait"]

[dependencies]
reasoningbank-core = { path = "../reasoningbank-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Native-only dependencies (not included in WASM builds)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# WASM-only dependencies (only included in WASM builds)
[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["Window", "IdbFactory", "console"], optional = true }
async-trait = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util", "macros"] }
criterion = { workspace = true }

[[bench]]
name = "storage_benchmark"
harness = false
path = "../../benches/storage_benchmark.rs"
