[package]
name = "climate-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
climate-core = { path = "../climate-core" }
climate-data = { path = "../climate-data" }
climate-models = { path = "../climate-models" }
climate-physics = { path = "../climate-physics" }
tokio = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
