[package]
name = "climate-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "climate"
path = "src/main.rs"

[dependencies]
climate-core = { path = "../climate-core" }
climate-data = { path = "../climate-data" }
climate-models = { path = "../climate-models" }
climate-api = { path = "../climate-api" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
