[package]
name = "climate-data"
version = "0.1.0"
edition = "2021"
authors = ["Climate Prediction Team"]
description = "Data ingestion module for climate prediction system"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Caching
moka = { version = "0.12", features = ["future"] }

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cloud storage (for ERA5 data)
rusoto_core = "0.48"
rusoto_s3 = "0.48"

# Data validation
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.5"
