[package]
name = "climate-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
climate-core = { path = "../climate-core" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "model_inference"
harness = false
