[package]
name = "data-models"
version = "0.1.0"
edition = "2021"
authors = ["CRISPR-Cas13 Team"]
description = "Shared data structures for CRISPR-Cas13 pipeline"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
proptest = "1.5"
