[package]
name = "offtarget-predictor"
version = "0.1.0"
edition = "2021"
authors = ["CRISPR-Cas13 Team"]
description = "ML-based off-target prediction for CRISPR-Cas13"
license = "MIT"

[dependencies]
data-models = { path = "../data-models" }
alignment-engine = { path = "../alignment-engine" }
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
ndarray = "0.16"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1.5"
tempfile = "3.8"
approx = "0.5"
